--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,10 @@ let listMaisons = await pb.collection(Collections.Maison).getFullList({
 
 <Layout>
   <!-- Utiliser une grille pour afficher les Card -->
-  <h1>Vous êtes bien arrivés sur la page de test !</h1>
-  <div
+  <!-- <div
     class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 mt-4 w-full max-w-full overflow-x-auto"
   >
     {listMaisons.map((maison) => <Card maison={maison} />)}
-  </div>
+  </div> -->
+  <h1>page de test</h1>
 </Layout>
