--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,4 +16,6 @@ let listMaisons = await pb.collection(Collections.Maison).getFullList({
   >
     {listMaisons.map((maison) => <Card maison={maison} />)}
   </div>
+
+  <h2>Tout fonctionne bien ! Je teste une optimisation !</h2>
 </Layout>
